<resources>
    <string name="app_name">Appointments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">logo</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="home">Home</string>
    <string name="appointments">Appointments</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="fab">fab</string>
    <string name="_10_00">10:00</string>
</resources>